--- a/src/main/resources/templates/addevent.html
+++ b/src/main/resources/templates/addevent.html
@@ -6,7 +6,9 @@
 <div class="row">
   <div class="event-form-container">
     <form id="eventForm" method="post" enctype="multipart/form-data">
-      <button type="button" class="btn btn-dark mb-1" id="resetButton" onclick="resetTicketInfo()">리셋</button>
+      <button type="button" class="btn btn-dark mb-1" id="resetButton" onclick="resetTicketInfo()">
+        리셋
+      </button>
       <div class="input-group mb-3">
         <select class="form-select" id="inputGroupSelect04"
                 aria-label="Example select with button addon">
