--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -45,7 +45,7 @@
             </div>
           </li>
         </ul>
-        <p style="margin-top: 30px; margin-left: 190px" id="responseTime"></p>
+        <p style="margin-top: 30px" id="responseTime"></p>
       </div>
     </div>
   </div>
