--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -9,10 +9,14 @@
     <ul class="footer_menu_list">
       <li class="footer_menu_item"><a href="/" class="footer_menu_link">팀원소개 | </a>
       </li>
-      <li class="footer_menu_item"><a href="https://github.com/jangjh45" class="footer_menu_link">장진혁</a></li>
-      <li class="footer_menu_item"><a href="https://github.com/ChoonB" class="footer_menu_link">김건율</a></li>
-      <li class="footer_menu_item"><a href="https://github.com/dltngurxodud" class="footer_menu_link">서성혁</a></li>
-      <li class="footer_menu_item"><a href="https://github.com/Yujin-17" class="footer_menu_link">이유진</a></li>
+      <li class="footer_menu_item"><a href="https://github.com/jangjh45" class="footer_menu_link">장진혁</a>
+      </li>
+      <li class="footer_menu_item"><a href="https://github.com/ChoonB"
+                                      class="footer_menu_link">김건율</a></li>
+      <li class="footer_menu_item"><a href="https://github.com/dltngurxodud"
+                                      class="footer_menu_link">서성혁</a></li>
+      <li class="footer_menu_item"><a href="https://github.com/Yujin-17" class="footer_menu_link">이유진</a>
+      </li>
     </ul>
   </div>
   <div class="footer_inner"><span class="footer_corp_title">NETicket</span>
