--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -253,7 +253,8 @@
 <body>
 <div class="logo-container">
   <a href="/neticket">
-    <img src="/images/logo2.png" alt="NETicket" style="width: 150px; object-fit: contain; margin-bottom: 70px">
+    <img src="/images/logo2.png" alt="NETicket"
+         style="width: 150px; object-fit: contain; margin-bottom: 70px">
   </a>
 </div>
 <div class="container" id="container">
@@ -274,7 +275,8 @@
   <div class="form-container sign-in-container">
     <form action="#">
       <h1>로그인</h1>
-      <input type="email" class="form-control" id="login_email" aria-describedby="emailHelp" placeholder="이메일">
+      <input type="email" class="form-control" id="login_email" aria-describedby="emailHelp"
+             placeholder="이메일">
       <input type="password" class="form-control" id="login_password" placeholder="비밀번호">
       <button type="button" onclick="login()">로그인</button>
     </form>
