--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -245,7 +245,7 @@
   }
 
   footer a {
-    color: #3C97BF;
+    color: #f14646;
     text-decoration: none;
   }
 </style>
@@ -287,7 +287,7 @@
       <div class="overlay-panel overlay-left">
         <h1>Welcome to Neticket!</h1>
         <p>계정이 있다면,<br>
-        로그인 버튼을 클릭해 로그인!</p>
+          로그인 버튼을 클릭해 로그인!</p>
         <button class="ghost" id="signIn">로그인</button>
       </div>
       <div class="overlay-panel overlay-right">
