--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,21 +7,21 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="2000">
-      <a href="http://neticket-load-balancer-572290659.ap-northeast-2.elb.amazonaws.com/neticket/events/11">
+      <a href="/neticket/events/11">
         <img
             src="https://image.toast.com/aaaaab/ticketlink/TKL_8/TopBanner_%EB%B9%84%EC%8A%A4%ED%8B%B0.jpg"
             class="d-block w-100" alt="...">
       </a>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <a href="http://neticket-load-balancer-572290659.ap-northeast-2.elb.amazonaws.com/neticket/events/12">
+      <a href="/neticket/events/12">
         <img
             src="https://image.toast.com/aaaaab/ticketlink/TKL_5/TopBanner_%EB%A0%88%EB%93%9C%EB%B6%81.jpg"
             class="d-block w-100" alt="...">
       </a>
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <a href="http://neticket-load-balancer-572290659.ap-northeast-2.elb.amazonaws.com/neticket/events/13">
+      <a href="/neticket/events/13">
         <img
             src="https://image.toast.com/aaaaab/ticketlink/TKL_6/TopBanner_PC_%EC%9B%90%ED%94%BD.jpg"
             class="d-block w-100" alt="...">
