Feat : 공연 데이터 50개 추가, 상세페이지 예매종료 표시
공연 데이터 50개 추가
상세페이지 예매종료 표시

Related to: #119

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -37,6 +37,9 @@
               00:00:00
             </div>
           </li>
+          <li class="infoItem"><strong class="infoLabel"></strong>
+            <div class="infoDesc end"></div>
+          </li>
           <li class="infoItem">
             <button id="bookingButton" onclick="onBookingButtonClick()">예매하기</button>
           </li>
